# MindSet-Hackathon-API

./: .env  .gitignore  docker-compose.yml  main.py  nginx.conf  pyproject.toml
src/: application.py  bootstrap.py
src/clients/: llm_client.py
src/common/: config.py  const.py  container.py  errors.py  prompts.py  security.py
src/middlewares/: session.py
src/models/: auth_pyd.py  config.py
src/models/forms/: auth_forms.py
src/repositories/: calendar_repository.py  example_repository.py  llm_repository.py  todo_calendar_repository.py  user_repository.py
src/routers/: auth.py  calendar_router.py  default.py  llm_all.py  llm_router.py
src/services/: auth_service.py  calendar_service.py  llm_service.py  onbording_test.py
